исправили карусель в product.html, доделали меню в header

--- a/cart.html
+++ b/cart.html
@@ -110,11 +110,10 @@
                                 </li>
                             </ul>
                         </div>
-                        
                     </div>
                 </div>
                 <div class="cart__position">
-                    <img src="./img/cart_man-2.jpg" alt="man" width="262" height="306">
+                    <img class="cart__position-img" src="./img/cart_man-2.jpg" alt="man" width="262" height="306">
                     <div class="cart__position-description">
                         <div class="cart__position-title">
                             <h2>mango  people<br>t-shirt</h2>
@@ -143,7 +142,7 @@
                     <input class="form__cart-field" type="text" placeholder="Bangladesh">
                     <input class="form__cart-field" type="text" placeholder="State">
                     <input class="form__cart-field" type="text" placeholder="Postcode / Zip">
-                    <button class="form__cart-button">Get a quote</button>
+                    <button class="form__cart-button" type="button">Get a quote</button>
                 </fieldset>
                 <ul class="form__checkout">
                     <li class="form__checkout-text">sub total $900</li>
