--- a/product.html
+++ b/product.html
@@ -83,15 +83,15 @@
         </div>
     </header>
     <main>
-        <section class="commodity">
-            <h1 class="commodity__title container">new arrivals</h1>
-            <nav class="commodity__menu">home / men /<span class="commodity__menu-pink">new arrivals</span></nav>
+        <section class="catalog">
+            <h1 class="catalog__title container">new arrivals</h1>
+            <nav class="catalog__menu">home / men /<span class="commodity__menu-pink">new arrivals</span></nav>
         </section>
         <div class="commodity__carousel">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                    <img class='carousel-img' src="./img/product_woman.jpg" class="d-block w-100" alt="woman">
+                    <img class='carousel-img' src="./img/woman_product.jpg" class="d-block w-100" alt="woman">
                     </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"  data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"><svg class="carousel-control-prev-icon" width="13" height="23" viewBox="0 0 13 23" xmlns="http://www.w3.org/2000/svg">
@@ -114,7 +114,7 @@
                     <path d="M63 0.786865H0V3.81225H63V0.786865Z" fill="#EF5B70"/>
                 </svg>
                 <p class="commodity__characteristic-cheap">moschino cheap and chic</p>
-                <p class="product__characteristic-text" >Compellingly actualize fully researched processes before proactive outsourcing. 
+                <p class="commodity__characteristic-text" >Compellingly actualize fully researched processes before proactive outsourcing. 
                     Progressively syndicate collaborative architectures before cutting-edge services. 
                     Completely visualize parallel core competencies rather than exceptional portals.</p>
                 <p class="commodity__characteristic-price">$561</p>
@@ -144,52 +144,46 @@
                 </button>
             </div>
         </section>
-        <section class="products container">
-            <ul class="products__list">
-                <li class="products__item product">
-                    <div class="product__wrapper">
+        <section class="commodity__lattice container">
+            <div class="grid">
+                <div class="grid__item">
+                    <div class="grid__item-img">
                         <a href="./catalog.html">
                             <img src="./img/man_capsule-3.jpg" alt="man" width="360" height="420">
                         </a>
-                        <div class="product__description">
-                            <h3 class="product__title">ellery x m'o capsule</h3>
-                            <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
+                            <h3 class="grid__item-title">ellery x m'o capsule</h3>
+                            <p class="grid__item-text">Known for her sculptural takes on traditional tailoring, Australian
                                 arbiter
                                 of cool Kym Ellery
                                 teams up with Moda Operandi.</p>
-                            <p class="product__price">$52.00</p>
-                        </div>
+                            <p class="grid__item-price">$52.00</p>
                     </div>
-                </li>
-                <li class="products__item product product__mobile">
-                    <div class="product__wrapper">
+                </div>
+                <div class="grid__item grid__item-mobile">
+                    <div class="grid__item-img">
                         <a href="./catalog.html">
                             <img src="./img/man_capsule-2.jpg" alt="man" width="360" height="420">
                         </a>
-                        <div class="product__description">
-                            <h3 class="product__title">ellery x m'o capsule</h3>
-                            <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
+                            <h3 class="grid__item-title">ellery x m'o capsule</h3>
+                            <p class="grid__item-text">Known for her sculptural takes on traditional tailoring, Australian
                                 arbiter
                                 of cool Kym Ellery
                                 teams up with Moda Operandi.</p>
-                            <p class="product__price">$52.00</p>
-                        </div>
+                            <p class="grid__item-price">$52.00</p>
                     </div>
-                </li>
-                <li class="products__item product product__tablet">
-                    <div class="product__wrapper">
+                </div>
+                <div class="grid__item product grid__item-tablet">
+                    <div class="grid__item-img">
                         <a href="./catalog.html"><img src="./img/woman_capsule-3.jpg" alt="woman" width="360" height="420"></a>
-                        <div class="product__description">
-                            <h3 class="product__title">ellery x m'o capsule</h3>
-                            <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
+                            <h3 class="grid__item-title">ellery x m'o capsule</h3>
+                            <p class="grid__item-text">Known for her sculptural takes on traditional tailoring, Australian
                                 arbiter
                                 of cool Kym Ellery
                                 teams up with Moda Operandi.</p>
-                            <p class="product__price">$52.00</p>
-                        </div>
+                            <p class="grid__item-price">$52.00</p>
                     </div>
-                </li>                         
-            </ul>
+                </div>                         
+            </div>
         </section>
     </main>
     <footer>
