--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         </li>
                         <li>
                             <a class="header__sub-title" href="#">woman</a>
-                            <ul>
+                            <ul class="header__sub-navigation-list">
                                 <li><a href="#" class="header__sub-navigation-link">Accessories</a></li>
                                 <li><a href="#" class="header__sub-navigation-link">Jackets & Coats</a></li>
                                 <li> <a href="#" class="header__sub-navigation-link">Polos</a></li>
@@ -70,8 +70,8 @@
                         </li>
                         <li>
                             <a class="header__sub-title" href="#">kids</a>
-                            <ul>
-                                <li><a href="#">Accessories</a></li>
+                            <ul class="header__sub-navigation-list">
+                                <li><a href="#" class="header__sub-navigation-link">Accessories</a></li>
                                 <li><a href="#" class="header__sub-navigation-link">Jackets & Coats</a></li>
                                 <li><a href="#" class="header__sub-navigation-link">Polos</a></li>
                                 <li><a href="#" class="header__sub-navigation-link">T-Shirts</a></li>
