исправили ширину input в registration.html и cart.html

--- a/product.html
+++ b/product.html
@@ -63,7 +63,7 @@
                         <li>
                             <a class="header__sub-title" href="#">kids</a>
                             <ul>
-                                <li><a href="#">Accessories</a></li>
+                                <li><a href="#"></a>Accessories</li>
                                 <li><a href="#" class="header__sub-navigation-link">Jackets & Coats</a></li>
                                 <li><a href="#" class="header__sub-navigation-link">Polos</a></li>
                                 <li><a href="#" class="header__sub-navigation-link">T-Shirts</a></li>
